# OCEAN

./: .gitignore  CMakeLists.txt  README.md
include/: cxlcontroller.h  monitor.h  policy.h  rdma_communication.h
include/spdlog/: spdlog.h
include/spdlog/cfg/: env.h
qemu_integration/: CMakeLists.txt  README.md  cxl-numa-setup.service  launch_qemu_cxl.sh  launch_qemu_cxl1.sh  launch_qemu_cxl1_tigon.sh  launch_qemu_cxl_host.sh  launch_qemu_cxl_tigon.sh  prepare_rdma_vm_images.sh  print_rdma_launch_plan.sh  setup_cxl_numa.sh  start_server_rdma.sh
qemu_integration/include/: qemu_cxl_memsim.h
qemu_integration/src/: cxlmemsim_server_rdma.cpp  qemu_cxl_memsim.c  qemu_rdma_wrapper.cpp
script/: destroy_optional_cross_machine_network.sh  destroy_optional_cross_machine_network_all_hosts.sh  hosts.txt  launch_qemu_cxl_all_hosts.sh  setup_host.sh  setup_host_sudo.sh  setup_optional_cross_machine_network.sh  setup_optional_cross_machine_network_all_hosts.sh  stop_qemu_cxl_all_hosts.sh  verify_optional_cross_machine_network.sh  verify_optional_cross_machine_network_all_hosts.sh
src/: helper.cpp  incore.cpp  rdma_communication.cpp
workloads/gromacs/: mpi_cxl_shim.c
workloads/stream/: README.md
